--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ sudo: false
 python:
     - "3.5"
 
+install:
+    - pip install -r requirements.txt
+
 script:
-    - pylint src/
-    - pylint tests/
-    - cd tests/ && nosetests
+    - pylint andrewsite/
